<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="title_activity_time_line">TimeLineActivity</string>
    <string name="title_activity_my_tab">MyTabActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">Piece</string>
    <string name="title_activity_test_mpchart">TestMPChartActivity</string>
    <string name="title_activity_new_tag">NewTagActivity</string>
    <string name="title_activity_total_statistic">TotalStatisticActivity</string>

    <string name="title_activity_set">设置</string>
    <string name="total_time">总时间</string>
    <string name="total_record">总记录数</string>
    <string name="per_week">平均每周</string>
    <string name="last_week">最近7天</string>
    <string name="new_tag_date_label">选择截止时间</string>
    <string name="new_tag_plan_label">平均每天时间</string>

    <string name="plus_add_task">添加任务</string>
    <string name="action_manage_task">管理任务</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_period_item">PeriodItemActivity</string>
    <string name="title_activity_item_statistic">ItemStatisticActivity</string>
    <string name="item_stat_hour">hours</string>
    <string name="item_stat_days">坚持天数</string>
    <string name="item_stat_to_target">距离里程碑</string>
    <string name="edit_item">编辑</string>
    <string name="delete_item">删除</string>
    <string name="title_activity_modify_psw">ModifyPswActivity</string>
    <string name="title_alert">提醒</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
</resources>
