<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.wechatsample.MainActivity" >

    <item
    android:id="@+id/action_plus"
    android:icon="@drawable/actionbar_add_icon"
    android:title="@string/plus_add_task"
    app:showAsAction="always"
    android:orderInCategory="1"/>

    <item
        android:id="@+id/action_manage"
        android:icon="@drawable/action_manage_icon"
        android:title="@string/action_manage_task"
        app:showAsAction="never"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/action_set"
        android:icon="@drawable/action_setting_icon"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:orderInCategory="3"/>

</menu>